--- a/admin-dashboard/styles.css
+++ b/admin-dashboard/styles.css
@@ -15,7 +15,7 @@
 /* sidebar */
 
 .sidebar {
-    background-color: rgb(44, 137, 217);
+    background-color: rgb(45, 157, 255);
     color: white;
     font-weight: bold;
     font-family: "roboto";
@@ -67,6 +67,9 @@
     grid-template-rows: 1fr 1fr;
 }
 
+.header img{
+    width: 20px;
+}
 /* main */
 
 .main {
