--- a/admin-dashboard/styles.css
+++ b/admin-dashboard/styles.css
@@ -7,6 +7,10 @@
     box-sizing: border-box;
 }
 
+body {
+    margin: 0;
+}
+
 .container {
     display: grid;
     grid-template-columns: 1fr 4fr;
@@ -19,11 +23,7 @@
     color: white;
     font-weight: bold;
     font-family: "roboto";
-
-
     grid-row: 1 / 3;
-
-    
     display: flex;
     flex-direction: column;
 }
@@ -61,18 +61,152 @@
 /* header */
 
 .header {
-    background-color: lightblue;
+    background-color: white;
     grid-column: 2 / 3;
     display: grid;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 100px 100px;
+    margin: 0;
+    padding: 0 0 10px 40px;
 }
 
 .header img{
-    width: 20px;
+    width: 25px;
 }
+
+.header-top {
+    display: flex;
+    justify-content: space-between;
+    padding: 0;
+}
+
+.search-bar {
+    display: flex;
+    gap: 10px;
+    justify-content: flex-start;
+    align-items: center;
+    width: 70%;
+}
+
+input[type="search"] {
+    border-radius: 20px;
+    border: none;
+    background-color: rgb(230, 235, 245);
+    width: 80%;
+    line-height: 1.5rem;
+    font-size: 80%;
+}
+
+.user-info {
+    display: flex;
+    gap: 30px;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 0 50px 0 0;
+}
+
+.user-info #profile-picture {
+    width: 60px;
+    background-color: rgb(248, 193, 41);
+    border-radius: 50%;
+    border: 2px solid;
+}
+
+.user-info #user-name {
+    font-weight: bold;
+    font-size: 25px;
+    font-family: "robot";
+}
+
+.header-bottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+    padding: 0 20px 20px 20px;
+}
+
+.profile {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.profile div {
+    font-family: "roboto";
+    font-weight: bold;
+    font-size: 1.25rem;
+}
+
+.profile span {
+    font-family: "roboto";
+    font-weight: bold;
+    font-size: 0.75rem; 
+}
+
+.profile img {
+    width: 100px;
+    background-color: rgb(248, 193, 41);
+    border-radius: 50%;
+    border: 2px solid;
+}
+
+.buttons {
+    display: flex;
+    justify-content: space-around;
+    width: 30%;
+}
+
+.buttons button {
+    background-color: rgb(45, 157, 255);
+    color: white;
+    border: none;
+    font-weight: bold;
+    border-radius: 20px;
+    padding: 10px 20px;
+}
+
 /* main */
 
 .main {
-    background-color: lightsalmon;
+    background-color: rgb(230, 235, 245);
     grid-column: 2 / 3;
+    padding: 30px;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    gap: 20px;
+}
+
+.main img {
+    width: 20px;
+}
+
+.main-left {
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+}
+
+.projects {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+}
+
+.projects > div {
+    background-color: white;
+    border-radius: 10px;
+    padding: 30px;
+    border-left: 8px solid rgb(248, 193, 41);
+    box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.icons {
+    display: flex;
+    justify-content: flex-end;
+    gap: 20px;
+    padding-right: 20px;
+    align-self: flex-end;
 }
