--- a/admin-dashboard/styles.css
+++ b/admin-dashboard/styles.css
@@ -24,9 +24,12 @@ body {
     color: white;
     font-weight: bold;
     font-family: "roboto";
+    font-size: 1.5rem;
     grid-row: 1 / 3;
     display: flex;
     flex-direction: column;
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
+    z-index: 1;
 }
 
 .logo {
@@ -68,6 +71,8 @@ body {
     grid-template-rows: 100px 100px;
     margin: 0;
     padding: 0 0 10px 40px;
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
+    z-index: 1;
 }
 
 .header img{
@@ -171,10 +176,11 @@ input[type="search"] {
 .main {
     background-color: rgb(230, 235, 245);
     grid-column: 2 / 3;
-    padding: 30px;
+    padding: 30px 30px 0 30px;
     display: grid;
     grid-template-columns: 3fr 1fr;
-    gap: 20px;
+    grid-template-rows: 1fr 1fr;
+    gap: 20px 20px;
 }
 
 .main img {
@@ -212,6 +218,11 @@ input[type="search"] {
     align-self: flex-end;
 }
 
+.main-top-right {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+}
+
 .announcements{
     background-color: white;
     border-radius: 10px;
@@ -221,4 +232,67 @@ input[type="search"] {
 
 .announcements hr {
     border: 1px solid rgb(230, 235, 245);
+    margin: 0;
+}
+
+.main-bottom-right h2 {
+    margin-top: 0;
+}
+
+.main-bottom-right {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+}
+
+.trending {
+    background-color: white;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
+}
+
+.trending > div {
+    display: flex;
+    gap: 20px;
+}
+
+.trending img {
+    width: 55px;
+    border-radius: 50%;
+    border: 1px solid black;
+}
+
+.blue {
+    background-color: rgb(173, 216, 230);
+}
+
+.yellow {
+    background-color: rgb(248, 193, 41);
+}
+
+.gray {
+    background-color: rgb(128, 128, 128);
+}
+
+.pink {
+    background-color: rgb(255, 192, 203);
+}
+
+.trend-content {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.trend-content h4, .trend-content p {
+    margin: 0;
+    padding: 2px;
+}
+
+.trend-content p {
+    color: gray;
 }
