--- a/library-app/styles.css
+++ b/library-app/styles.css
@@ -186,6 +186,10 @@ form button {
     background-color: hsl(103, 100%, 70%);
 }
 
+form button:hover {
+    background-color: hsl(103, 100%, 75%);
+}
+
 .checkbox-container {
     display: flex;
     align-items: center;
