--- a/library-app/styles.css
+++ b/library-app/styles.css
@@ -209,6 +209,15 @@ form #close-btn {
     color: black;
 }
 
+form .error-msg {
+    display: none;
+    font-size: 1rem;
+    background-color: rgb(252, 124, 124);
+    margin: 0;
+    padding: 5px;
+    border: 2px solid red;
+}
+
 form button {
     font-size: 1.5rem;
     color: white;
