--- a/tic-tac-toe/styles.css
+++ b/tic-tac-toe/styles.css
@@ -11,6 +11,7 @@ body {
     font-size: 60px;
     margin: 0;
     padding: 0;
+    color: rgb(63, 63, 63);
 }
 
 .game-container {
@@ -35,7 +36,7 @@ body {
     height: 150px;
     background-color: white;
     border: none;
-    box-shadow: 0 0 0 5px;
+    box-shadow: 0 0 0 5px rgb(63, 63, 63);
     font-size: 100px;
 }
 
