--- a/tic-tac-toe/styles.css
+++ b/tic-tac-toe/styles.css
@@ -32,19 +32,19 @@ body {
 }
 
 .cell {
-    width: 130px;
-    height: 130px;
+    width: 120px;
+    height: 120px;
     background-color: white;
     border: none;
     box-shadow: 0 0 0 5px rgb(63, 63, 63);
-    font-size: 100px;
+    font-size: 80px;
 }
 
 .cell:hover {
     cursor: pointer;
 }
 
-.game-container .player-turn, .game-container .winner-display {
+.game-container .players-turn, .game-container .winner-display {
     font-size: 30px;
     font-weight: bold;
     margin: 0;
@@ -59,7 +59,6 @@ body {
 }
 
 .game-container .winner-display {
-    color:rgb(51, 199, 149);
     display: none;
 }
 
